# solana-asset-splitter

./: Cargo.toml  README.md
src/: entrypoint.rs  error.rs  event.rs  instruction.rs  lib.rs  processor.rs  program.rs
tests/: test.rs
